--- a/demo/app/views/say/hello.html.erb
+++ b/demo/app/views/say/hello.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
 
@@ -8,10 +9,18 @@
 
 
 <body>
+
   <h1>Hello from Rails!</h1>
-    <p>
-      It is now <%= @time %>
-    </p>
+
+  <p>
+    It is now <%= @time %>
+  </p>
+
+  <p>
+    Time to say <%= link_to("goodbye", say_goodbye_path) %>!
+  </p>
+
+
 </body>
 
 
