finish catalog display

--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
         <li><a href="http://www.../news">News</a></li>
         <li><a href="http://www.../contact">Contact</a></li>
       </ul>
+      <p>
+        It is now <%= Time.now %>
+      </p>
     </div>
     <div id="main">
       <%= yield %>
