--- a/depot/app/assets/stylesheets/application.css.scss
+++ b/depot/app/assets/stylesheets/application.css.scss
@@ -38,19 +38,40 @@
 }
 
 #columns {
-  background: #141;
+  background: white;
 
   #main {
     margin-left: 17em;
     padding: 1em;
+    padding-left: 6em;
     background: white;
   }
 
   #side {
-    float: left;
-    padding: 1em 2em;
-    width: 13em;
+    float:      left;
+    padding:    1em 2em;
+    width:      17em;
     background: #141;
+
+    form, 
+    div {
+      display: inline;
+    }  
+ 
+    input {
+      font-size: small;
+    }
+
+    #cart {
+      font-size: smaller;
+      color:     white;
+
+      table {
+        border-top:    1px dotted #595;
+        border-bottom: 1px dotted #595;
+        margin-bottom: 10px;
+      }
+    }
 
     p {
       color: white;
