--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -28,13 +28,17 @@
       </ul>
 
       <p>
-        Current Time &amp Date:<br>
+        Current Date &amp Time:<br>
         <%= Time.now.strftime("%B %d, %Y") %><br>
         <%= Time.now.strftime("%H:%M:%S") %><br>
       </p>
 
       <div id="cart">
-        <%= render @cart %>
+        <% if @cart %>
+          <% hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+            <%= render @cart %>
+          <% end %>
+        <% end %>
       </div>
 
     </div>
