--- a/depot/app/views/orders/_form.html.erb
+++ b/depot/app/views/orders/_form.html.erb
@@ -1,37 +1,51 @@
-<%= form_with(model: order, local: true) do |form| %>
-  <% if order.errors.any? %>
+<%= form_for(@order) do |f| %>
+  <% if @order.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
+      <h2>
+        <%= pluralize(order.errors.count, "error") %>
+        prohibited this order from being saved:
+      </h2>
 
       <ul>
-      <% order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% order.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :order_name %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name, size: 40 %>
   </div>
 
   <div class="field">
-    <%= form.label :address %>
-    <%= form.text_area :address, id: :order_address %>
+    <%= f.label :address %>
+    <%= f.text_area :address, rows: 3, columns: 40 %>
   </div>
 
   <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :order_email %>
+    <%= f.label :email %>
+    <%= f.email_field :email, size: 40 %>
   </div>
 
   <div class="field">
-    <%= form.label :pay_type %>
-    <%= form.text_field :pay_type, id: :order_pay_type %>
+    <%= f.label :pay_type %>
+    <%= f.select :pay_type, Order::PAYMENT_TYPES,
+                  prompt: 'Select a payment method' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit 'Place Order' %>
   </div>
 <% end %>
+
+
+
+
+
+
+
+
+
+
