--- a/depot/app/views/orders/_form.html.erb
+++ b/depot/app/views/orders/_form.html.erb
@@ -31,8 +31,7 @@
 
   <div class="field">
     <%= f.label :pay_type %>
-    <%= f.select :pay_type, Order::PAYMENT_TYPES,
-                  prompt: 'Select a payment method' %>
+    <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Select a payment method' %>
   </div>
 
   <div class="actions">
