--- a/depot/app/views/orders/_form.html.erb
+++ b/depot/app/views/orders/_form.html.erb
@@ -2,12 +2,12 @@
   <% if @order.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(order.errors.count, "error") %>
+        <%= pluralize(@order.errors.count, "error") %>
         prohibited this order from being saved:
       </h2>
 
       <ul>
-      <% order.errors.full_messages.each do |msg| %>
+      <% @order.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
