successfully transmit email from gmail to hotmail

--- a/depot/app/views/order_notifier_mailer/received.html.erb
+++ b/depot/app/views/order_notifier_mailer/received.html.erb
@@ -1,11 +1,11 @@
-<h3>Pragmatic Order Received</h3>
+<h3>Pragmatic Bookstore Order Received</h3>
 
 <p>
-  Dear <%= @order.name %>
+  Dear <%= @order.name %>,<br><br>
 
-  Thank you for your recent order from the Pragmatic Bookstore.
+  Thank you for your recent order from the Pragmatic Bookstore.<br><br>
 
-  You ordered the following items:
+  You ordered the following items:<br>
 </p>
 
 <table>
