--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -12,13 +12,21 @@
 
 <body class='<%= controller.controller_name %>'>
 
+
   <div id="banner">
     <%= image_tag("logo.png") %>
     <%= @page_title || "Pragmatic Bookshelf" %>
   </div>
 
+
   <div id="columns">
+
     <div id="side">
+      <% if @cart %>
+        <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %> 
+          <%= render @cart %>
+        <% end %>
+      <% end %>
 
       <ul>
         <li><a href="http://www...">Home</a></li>
@@ -33,18 +41,20 @@
         <%= Time.now.strftime("%H:%M:%S") %><br>
       </p>
 
-      <div id="cart">
-        <% if @cart %>
-          <% hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-            <%= render @cart %>
-          <% end %>
-        <% end %>
-      </div>
-
+      <% if session[:user_id] %>
+        <ul>
+          <li><%= link_to 'Orders',   orders_path   %></li>
+          <li><%= link_to 'Products', products_path %></li>
+          <li><%= link_to 'Users',    users_path    %></li>
+        </ul>
+        <%= button_to 'Logout', logout_path, method: :delete %>
+      <% end %>
     </div>
+
     <div id="main">
       <%= yield %>
     </div>
+
   </div>
 
   <script
