--- a/depot/app/views/carts/_cart.html.erb
+++ b/depot/app/views/carts/_cart.html.erb
@@ -1,5 +1,4 @@
-<% unless cart.line_items.empty? %>
-<div class="cart_title">Your Cart</div>
+<h2><%= t('.title') %></h2>
 
 <table>
   <%= render(cart.line_items) %>
@@ -11,8 +10,7 @@
 
 </table>
 
-<%= button_to 'Checkout', new_order_path, method: :get %>
-<%= button_to 'Empty cart', cart, method: :delete,
-  data: { confirm: 'Are you sure?' } %>
 
-<% end %>
+<%= button_to t('.checkout'), new_order_path, method: :get %>
+<%= button_to t('.empty'), cart, method: :delete,
+  data: { confirm: 'Are you sure?' } %>
