--- a/depot/app/views/orders/_form.html.erb
+++ b/depot/app/views/orders/_form.html.erb
@@ -2,40 +2,44 @@
   <% if @order.errors.any? %>
     <div id="error_explanation">
       <h2>
-        <%= pluralize(@order.errors.count, "error") %>
-        prohibited this order from being saved:
+        <%=raw t('errors.template.header', 
+                  count: @order.errors.count, 
+                  model: t('activerecord.models.order')) %>.
       </h2>
+
+      <p><%= t('errors.template.body') %></p>
 
       <ul>
       <% @order.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <li><%=raw msg %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name, size: 40 %>
+    <%= f.label       :name, t('.name') %><br>
+    <%= f.text_field  :name, size: 40 %>
   </div>
 
   <div class="field">
-    <%= f.label :address %>
+    <%= f.label     :address, t('.address_html') %>
     <%= f.text_area :address, rows: 3, columns: 40 %>
   </div>
 
   <div class="field">
-    <%= f.label :email %>
+    <%= f.label       :email, t('.email') %>
     <%= f.email_field :email, size: 40 %>
   </div>
 
   <div class="field">
-    <%= f.label :pay_type %>
-    <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Select a payment method' %>
+    <%= f.label   :pay_type, t('.pay_type') %>
+    <%= f.select  :pay_type, Order::PAYMENT_TYPES, 
+                  prompt: t('.pay_prompt_html') %>
   </div>
 
   <div class="actions">
-    <%= f.submit 'Place Order' %>
+    <%= f.submit t('.submit') %>
   </div>
 <% end %>
 
