--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -37,15 +37,15 @@
           <%= t('.home') %></a>
         </li>
         <li>
-          <a href="http://www.../faq">
+          <a href="https://forums.pragprog.com/forums/311">
           <%= t('.questions') %></a>
         </li>
         <li>
-          <a href="http://www.../news">
+          <a href="http://www.railsinside.com/">
           <%= t('.news') %></a>
         </li>
         <li>
-          <a href="https://github.com/shaunc44/agile_web_dev_rails4">
+          <a href="https://github.com/shaunc44/">
           <%= t('.contact') %></a>
         </li>
       </ul>
@@ -53,7 +53,7 @@
       <p>
         <%= t('.date_title') %><br>
         <%= l(Date.today, format: :own_date) %><br>
-        <%= l(Time.now, format: :own_time) %><br>
+        <%= l(Time.now,   format: :own_time) %><br>
       </p>
 
       <% if @cart %>
