--- a/depot/app/views/orders/_form.html.erb
+++ b/depot/app/views/orders/_form.html.erb
@@ -23,8 +23,8 @@
   </div>
 
   <div class="field">
-    <%= f.label     :address, t('.address_html') %>
-    <%= f.text_area :address, rows: 3, columns: 40 %>
+    <%= f.label       :address, t('.address_html') %>
+    <%= f.text_area   :address, rows: 3, columns: 40 %>
   </div>
 
   <div class="field">
@@ -33,10 +33,12 @@
   </div>
 
   <div class="field">
-    <%= f.label   :pay_type, t('.pay_type') %>
-    <%= f.select  :pay_type, Order::PAYMENT_TYPES, 
-                  prompt: t('.pay_prompt_html') %>
+    <%= f.label       :pay_type, t('.pay_type') %>
+    <%= f.select      :pay_type, t('.payment_type'), 
+                      prompt: t('.pay_prompt_html') %>
   </div>
+
+<!-- :pay_type, Order::PAYMENT_TYPES, -->
 
   <div class="actions">
     <%= f.submit t('.submit') %>
